[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/cutscene_sprites/Wizard_f.png" type="Texture" id=1]
[ext_resource path="res://combat/interface/combat_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/btn_neutral.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/btn_hover.png" type="Texture" id=4]
[ext_resource path="res://interface/menus/EquipMenu/EquipmentSummaryPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/menus/EquipMenu/ItemBelt.gd" type="Script" id=6]
[ext_resource path="res://interface/UI/ui_theme.tres" type="Theme" id=7]
[ext_resource path="res://interface/menus/EquipMenu/ViewModule.gd" type="Script" id=8]
[ext_resource path="res://interface/menus/EquipMenu/EquipmentSlot.gd" type="Script" id=9]
[ext_resource path="res://interface/menus/EquipMenu/BattleActionsDisplay.gd" type="Script" id=10]
[ext_resource path="res://interface/menus/EquipMenu/BattleOption.gd" type="Script" id=11]
[ext_resource path="res://interface/UI/spinner_theme.tres" type="Theme" id=12]
[ext_resource path="res://interface/menus/EquipmentMenu.gd" type="Script" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="EquipmentMenu" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
custom_constants/separation = 32
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1388.0
margin_bottom = 1080.0
size_flags_horizontal = 3
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Panel" parent="VBoxContainer"]
margin_right = 1388.0
margin_bottom = 864.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ViewModule" type="HBoxContainer" parent="VBoxContainer/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Main/ViewModule"]
margin_top = 182.0
margin_right = 400.0
margin_bottom = 682.0
rect_min_size = Vector2( 400, 500 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Margins" type="MarginContainer" parent="VBoxContainer/Main/ViewModule"]
margin_left = 404.0
margin_right = 564.0
margin_bottom = 864.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="VBoxContainer/Main/ViewModule/Margins"]
margin_top = 182.0
margin_right = 128.0
margin_bottom = 682.0
rect_min_size = Vector2( 128, 500 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 18
alignment = 1

[node name="Weapon" type="Panel" parent="VBoxContainer/Main/ViewModule/Margins/Column"]
margin_right = 128.0
margin_bottom = 111.0
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Main/ViewModule/Margins/Column/Weapon"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffHand" type="Panel" parent="VBoxContainer/Main/ViewModule/Margins/Column"]
margin_top = 129.0
margin_right = 128.0
margin_bottom = 240.0
size_flags_vertical = 3
script = ExtResource( 9 )
equipment_type = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Main/ViewModule/Margins/Column/OffHand"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackMagic" type="Panel" parent="VBoxContainer/Main/ViewModule/Margins/Column"]
margin_top = 258.0
margin_right = 128.0
margin_bottom = 369.0
size_flags_vertical = 3
script = ExtResource( 9 )
equipment_type = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Main/ViewModule/Margins/Column/AttackMagic"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseMagic" type="Panel" parent="VBoxContainer/Main/ViewModule/Margins/Column"]
margin_top = 387.0
margin_right = 128.0
margin_bottom = 500.0
size_flags_vertical = 3
script = ExtResource( 9 )
equipment_type = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Main/ViewModule/Margins/Column/DefenseMagic"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BAMargins" type="MarginContainer" parent="VBoxContainer/Main/ViewModule"]
margin_left = 568.0
margin_right = 1388.0
margin_bottom = 864.0
size_flags_horizontal = 3
theme = ExtResource( 12 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="BattleActionsDisplay" type="Control" parent="VBoxContainer/Main/ViewModule/BAMargins"]
margin_left = 32.0
margin_top = 32.0
margin_right = 788.0
margin_bottom = 832.0
size_flags_horizontal = 3
script = ExtResource( 10 )

[node name="Column" type="VBoxContainer" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffensiveActions" type="VBoxContainer" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column"]
margin_right = 756.0
margin_bottom = 398.0
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="Magic" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions"]
margin_right = 756.0
margin_bottom = 130.0
hint_tooltip = "test tooltip"
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/Magic"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions"]
margin_top = 134.0
margin_right = 756.0
margin_bottom = 264.0
size_flags_vertical = 3

[node name="Normal" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/HBoxContainer"]
margin_right = 376.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/HBoxContainer/Normal"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Special" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/HBoxContainer"]
margin_left = 380.0
margin_right = 756.0
margin_bottom = 130.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/HBoxContainer/Special"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="Effect" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions"]
margin_top = 268.0
margin_right = 756.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/OffensiveActions/Effect"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefensiveActions" type="VBoxContainer" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column"]
margin_top = 402.0
margin_right = 756.0
margin_bottom = 800.0
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="Magic" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions"]
margin_right = 756.0
margin_bottom = 130.0
hint_tooltip = "test tooltip"
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/Magic"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions"]
margin_top = 134.0
margin_right = 756.0
margin_bottom = 264.0
size_flags_vertical = 3

[node name="Normal" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/HBoxContainer"]
margin_right = 376.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/HBoxContainer/Normal"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Special" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/HBoxContainer"]
margin_left = 380.0
margin_right = 756.0
margin_bottom = 130.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/HBoxContainer/Special"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="Effect" type="TextureButton" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions"]
margin_top = 268.0
margin_right = 756.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Main/ViewModule/BAMargins/BattleActionsDisplay/Column/DefensiveActions/Effect"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSummaryPanel" parent="VBoxContainer" instance=ExtResource( 5 )]

[node name="ItemContainer" type="Panel" parent="."]
margin_left = 1420.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 500, 0 )
custom_styles/panel = SubResource( 2 )

[node name="Margins" type="MarginContainer" parent="ItemContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row" type="HBoxContainer" parent="ItemContainer/Margins"]
margin_left = 32.0
margin_top = 32.0
margin_right = 468.0
margin_bottom = 1048.0
custom_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="ItemContainer/Margins/Row"]
margin_right = 436.0
margin_bottom = 1016.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="ItemBelt" type="VBoxContainer" parent="ItemContainer/Margins/Row/ScrollContainer"]
margin_right = 436.0
size_flags_horizontal = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
